--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -425,5 +425,6 @@
   "last_price": "Harga terakhir",
   "supply": "Jumlah Pasokan",
   "invalid_address": "Alamat tidak valid",
-  "unknown_address": "Alamat Tidak Diketahui"
+  "unknown_address": "Alamat Tidak Diketahui",
+  "success_transaction_executed": "Transaksi berhasil dijalankan"
 }
