--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -425,5 +425,6 @@
   "last_price": "Posljednja cijena",
   "supply": "Ukupna ponuda",
   "invalid_address": "Neispravna adresa",
-  "unknown_address": "Nepoznata adresa"
+  "unknown_address": "Nepoznata adresa",
+  "success_transaction_executed": "Transakcija je uspješno izvršena"
 }
