--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -426,5 +426,7 @@
   "supply": "Общее предложение",
   "invalid_address": "Неверный адрес",
   "unknown_address": "Неизвестный адрес",
-  "success_transaction_executed": "Транзакция успешно выполнена"
+  "success_transaction_executed": "Транзакция успешно выполнена",
+  "no_tokens_available": "Нет доступных токенов",
+  "trade_tokens_with": "Обменять токены с"
 }
