--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -426,5 +426,7 @@
   "supply": "Тотал Суппли",
   "invalid_address": "Погрешна адреса",
   "unknown_address": "Непозната адреса",
-  "success_transaction_executed": "Трансакција је успешно извршена"
+  "success_transaction_executed": "Трансакција је успешно извршена",
+  "no_tokens_available": "Токени нису доступни",
+  "trade_tokens_with": "Тргујте токенима са"
 }
