--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -426,5 +426,7 @@
   "supply": "总供应量",
   "invalid_address": "无效地址",
   "unknown_address": "未知地址",
-  "success_transaction_executed": "交易成功执行"
+  "success_transaction_executed": "交易成功执行",
+  "no_tokens_available": "没有可用的令牌",
+  "trade_tokens_with": "交易代币"
 }
