feat: toolbar dashboard selection

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -428,5 +428,13 @@
   "unknown_address": "Неизвестен адрес",
   "success_transaction_executed": "Транзакцията е успешно изпълнена",
   "no_tokens_available": "Няма налични жетони",
-  "trade_tokens_with": "Търгувайте жетони с"
+  "trade_tokens_with": "Търгувайте жетони с",
+  "simple": "Прост",
+  "trader": "Търговец",
+  "miner": "Миньор",
+  "power": "Мощен потребител",
+  "user_profile_desc_simple": "Опростено табло за управление. Най -доброто за потребителите от начално ниво.",
+  "user_profile_desc_power": "Разширено табло за управление с много допълнителна информация.",
+  "user_profile_desc_miner": "Табло с допълнителна информация за миньори.",
+  "user_profile_desc_trader": "Табло за управление с много търговска информация и допълнителни графики."
 }
