--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -428,5 +428,13 @@
   "unknown_address": "Άγνωστη διεύθυνση",
   "success_transaction_executed": "Η συναλλαγή εκτελέστηκε με επιτυχία",
   "no_tokens_available": "Δεν υπάρχουν διαθέσιμα διακριτικά",
-  "trade_tokens_with": "Συναλλαγές μάρκες με"
+  "trade_tokens_with": "Συναλλαγές μάρκες με",
+  "simple": "Απλός",
+  "trader": "Εμπορος",
+  "miner": "Μεταλλωρύχος",
+  "power": "Power User",
+  "user_profile_desc_simple": "Απλοποιημένος πίνακας ελέγχου. Καλύτερο για χρήστες αρχικού επιπέδου.",
+  "user_profile_desc_power": "Προηγμένος πίνακας ελέγχου με πολλές πρόσθετες πληροφορίες.",
+  "user_profile_desc_miner": "Πίνακας ελέγχου με πρόσθετες πληροφορίες για ανθρακωρύχους.",
+  "user_profile_desc_trader": "Πίνακας ελέγχου με πολλές πληροφορίες συναλλαγών και επιπλέον γραφήματα."
 }
