--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -428,5 +428,13 @@
   "unknown_address": "Непозната адреса",
   "success_transaction_executed": "Трансакција је успешно извршена",
   "no_tokens_available": "Токени нису доступни",
-  "trade_tokens_with": "Тргујте токенима са"
+  "trade_tokens_with": "Тргујте токенима са",
+  "simple": "Једноставно",
+  "trader": "Традер",
+  "miner": "Минер",
+  "power": "Корисник електричне енергије",
+  "user_profile_desc_simple": "Поједностављена контролна табла. Најбоље за кориснике почетног нивоа.",
+  "user_profile_desc_power": "Напредна контролна табла са пуно додатних информација.",
+  "user_profile_desc_miner": "Контролна табла са додатним информацијама за рударе.",
+  "user_profile_desc_trader": "Контролна табла са пуно информација о трговању и додатним графиконима."
 }
