--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -428,5 +428,13 @@
   "unknown_address": "Невідома адреса",
   "success_transaction_executed": "Транзакцію успішно виконано",
   "no_tokens_available": "Жодних токенів немає",
-  "trade_tokens_with": "Торгуйте токенами за допомогою"
+  "trade_tokens_with": "Торгуйте токенами за допомогою",
+  "simple": "Простий",
+  "trader": "Трейдер",
+  "miner": "Шахтар",
+  "power": "Потужний користувач",
+  "user_profile_desc_simple": "Спрощена інформаційна панель. Найкраще для користувачів початкового рівня.",
+  "user_profile_desc_power": "Розширена інформаційна панель з великою кількістю додаткової інформації.",
+  "user_profile_desc_miner": "Панель приладів з додатковою інформацією для майнерів.",
+  "user_profile_desc_trader": "Інформаційна панель з великою кількістю торгової інформації та додатковими графіками."
 }
