--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -428,5 +428,13 @@
   "unknown_address": "Tuntematon osoite",
   "success_transaction_executed": "Tapahtuma onnistui",
   "no_tokens_available": "Merkkejä ei ole saatavilla",
-  "trade_tokens_with": "Vaihda tunnuksia"
+  "trade_tokens_with": "Vaihda tunnuksia",
+  "simple": "Yksinkertainen",
+  "trader": "Kauppias",
+  "miner": "Kaivosmies",
+  "power": "Tehokäyttäjä",
+  "user_profile_desc_simple": "Yksinkertaistettu kojelauta. Paras lähtötason käyttäjille.",
+  "user_profile_desc_power": "Kehittynyt kojelauta, jossa on paljon lisätietoa.",
+  "user_profile_desc_miner": "Kojelauta, jossa on lisätietoja kaivostyöläisille.",
+  "user_profile_desc_trader": "Kojelauta, jossa on paljon kaupankäyntitietoja ja muita kaavioita."
 }
