--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -428,5 +428,13 @@
   "unknown_address": "Alamat Tidak Diketahui",
   "success_transaction_executed": "Transaksi berhasil dijalankan",
   "no_tokens_available": "Tidak ada token yang tersedia",
-  "trade_tokens_with": "Perdagangkan token dengan"
+  "trade_tokens_with": "Perdagangkan token dengan",
+  "simple": "Sederhana",
+  "trader": "Pedagang",
+  "miner": "Buruh tambang",
+  "power": "Pengguna Listrik",
+  "user_profile_desc_simple": "Dasbor Sederhana. Terbaik untuk pengguna tingkat pemula.",
+  "user_profile_desc_power": "Dasbor Lanjutan dengan banyak informasi tambahan.",
+  "user_profile_desc_miner": "Dasbor dengan informasi tambahan untuk penambang.",
+  "user_profile_desc_trader": "Dasbor dengan banyak informasi perdagangan dan grafik tambahan."
 }
