--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -428,5 +428,13 @@
   "unknown_address": "不明な住所",
   "success_transaction_executed": "トランザクションが正常に実行されました",
   "no_tokens_available": "利用可能なトークンはありません",
-  "trade_tokens_with": "トークンを"
+  "trade_tokens_with": "トークンを",
+  "simple": "単純",
+  "trader": "トレーダー",
+  "miner": "マイナー",
+  "power": "パワーユーザー",
+  "user_profile_desc_simple": "簡略化されたダッシュボード。エントリーレベルのユーザーに最適です。",
+  "user_profile_desc_power": "多くの追加情報を含む高度なダッシュボード。",
+  "user_profile_desc_miner": "鉱夫のための追加情報を含むダッシュボード。",
+  "user_profile_desc_trader": "たくさんの取引情報と追加のチャートを備えたダッシュボード。"
 }
