--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -428,5 +428,13 @@
   "unknown_address": "Adresă necunoscută",
   "success_transaction_executed": "Tranzacția a fost executată cu succes",
   "no_tokens_available": "Nu există jetoane disponibile",
-  "trade_tokens_with": "Tranzacționează jetoane cu"
+  "trade_tokens_with": "Tranzacționează jetoane cu",
+  "simple": "Simplu",
+  "trader": "Comerciant",
+  "miner": "Miner",
+  "power": "Utilizator puternic",
+  "user_profile_desc_simple": "Tablou de bord simplificat. Cel mai bun pentru utilizatorii entry level.",
+  "user_profile_desc_power": "Tablou de bord avansat cu o mulțime de informații suplimentare.",
+  "user_profile_desc_miner": "Tablou de bord cu informații suplimentare pentru mineri.",
+  "user_profile_desc_trader": "Tablou de bord cu o mulțime de informații de tranzacționare și diagrame suplimentare."
 }
