--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -428,5 +428,13 @@
   "unknown_address": "Неизвестный адрес",
   "success_transaction_executed": "Транзакция успешно выполнена",
   "no_tokens_available": "Нет доступных токенов",
-  "trade_tokens_with": "Обменять токены с"
+  "trade_tokens_with": "Обменять токены с",
+  "simple": "Простой",
+  "trader": "Трейдер",
+  "miner": "Шахтер",
+  "power": "Опытный пользователь",
+  "user_profile_desc_simple": "Упрощенная приборная панель. Лучше всего для пользователей начального уровня.",
+  "user_profile_desc_power": "Расширенная панель управления с большим количеством дополнительной информации.",
+  "user_profile_desc_miner": "Дашборд с дополнительной информацией для майнеров.",
+  "user_profile_desc_trader": "Панель инструментов с большим количеством торговой информации и дополнительными графиками."
 }
