--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -428,5 +428,13 @@
   "unknown_address": "Bilinmeyen Adres",
   "success_transaction_executed": "İşlem başarıyla gerçekleştirildi",
   "no_tokens_available": "Kullanılabilir jeton yok",
-  "trade_tokens_with": "Token ile ticaret yap"
+  "trade_tokens_with": "Token ile ticaret yap",
+  "simple": "Basit",
+  "trader": "tüccar",
+  "miner": "Madenci",
+  "power": "Güç kullanıcısı",
+  "user_profile_desc_simple": "Basitleştirilmiş Gösterge Tablosu. Giriş seviyesi kullanıcılar için en iyisi.",
+  "user_profile_desc_power": "Birçok ek bilgi içeren Gelişmiş Gösterge Tablosu.",
+  "user_profile_desc_miner": "Madenciler için ek bilgiler içeren pano.",
+  "user_profile_desc_trader": "Çok sayıda ticaret bilgisi ve ek çizelgeler içeren gösterge tablosu."
 }
