--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -428,5 +428,13 @@
   "unknown_address": "未知地址",
   "success_transaction_executed": "交易成功执行",
   "no_tokens_available": "没有可用的令牌",
-  "trade_tokens_with": "交易代币"
+  "trade_tokens_with": "交易代币",
+  "simple": "简单的",
+  "trader": "商人",
+  "miner": "矿工",
+  "power": "超级用户",
+  "user_profile_desc_simple": "简化的仪表板。最适合入门级用户。",
+  "user_profile_desc_power": "包含大量附加信息的高级仪表板。",
+  "user_profile_desc_miner": "为矿工提供额外信息的仪表板。",
+  "user_profile_desc_trader": "包含大量交易信息和附加图表的仪表板。"
 }
